feat: added 큰수더하기, modified prgramming_study_modified

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
@@ -18,6 +18,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "999"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 16진법 10진수로 변환\n",
+    "int('0x3e7', 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b10000101'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(133)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcd(a,b):\n",
+    "    c = max(a,b)\n",
+    "    d = min(a,b)\n",
+    "    \n",
+    "    while c % d:\n",
+    "        c,d = d,c%d\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcd(12,30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finding_gcd(*args):\n",
+    "    result = args[0]\n",
+    "    print(\"초기 result:\", result)\n",
+    "    for idx in range(1, len(args)):\n",
+    "        print()\n",
+    "        print(idx, \"번째 roop\")\n",
+    "        print(\"__finding_gcd(\", result, \", \", args[idx], \")\")\n",
+    "        result = __finding_gcd(result, args[idx])\n",
+    "        print(\"result =\", result)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def __finding_gcd(a, b):\n",
+    "    a, b = max(a, b), min(a, b)\n",
+    "    while b != 0:\n",
+    "        a, b = b, a % b\n",
+    "    return a\n",
+    "\n",
+    "print(finding_gcd(30, 12, 15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -43,7 +160,9 @@
     "            a += base ** (b-1) * int(num[i])\n",
     "        b -= 1\n",
     "        \n",
-    "    return a\n"
+    "    return a\n",
+    "\n",
+    "#1001의 경우 2**3 * num[i] + 2 **0 * num[i]"
    ]
   },
   {
@@ -70,6 +189,24 @@
     "        number = number // 10\n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -126,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +277,26 @@
     "    result += str(decimal)\n",
     "    result = int(result[::-1])\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1010"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decimal_to_base(10,2)"
    ]
   },
   {
@@ -165,7 +322,9 @@
     "        multiplier *= 10\n",
     "        number = number // base\n",
     "        \n",
-    "    return result"
+    "    return result\n",
+    "\n",
+    "#9 => result = 1 => result = 1+0 => 1+0+0 => 1+1000"
    ]
   },
   {
@@ -236,7 +395,9 @@
     "        digit = number % base\n",
     "        result = strings[digit] + result\n",
     "        number = number // base\n",
-    "    return result"
+    "    return result\n",
+    "\n",
+    "#ex) 31 => 16, 15 => strings[15] + \"\" => strings[1] + strings[15]"
    ]
   },
   {
@@ -264,10 +425,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "15//16"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,20 +495,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 1.7.2 최대공약수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finding_gcd(a,b):\n",
+    "    while a%b:\n",
+    "        result = b\n",
+    "        a, b = b, a % b\n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +527,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finding_gcd(21,12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -460,6 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 다시한번 정리를위해 인중님의 도우미...ㅋㅋㅋ\n",
     "def finding_prime_sqrt(number):\n",
     "    num = abs(number)\n",
     "    if num < 4:\n",
@@ -473,21 +674,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "3.4641016151377544"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import math\n",
+    "math.sqrt(12)"
+   ]
   },
   {
    "cell_type": "code",
@@ -528,6 +732,176 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "**16%17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 1 2 3 5 8 13 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacci(n):\n",
+    "    \n",
+    "    if n < 2 :\n",
+    "        return n\n",
+    "    return fibonacci(n-1) + fibonacci(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "from decimal import Decimal\n",
+    "\n",
+    "int(round(Decimal(math.sqrt(5)),0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prime_number(n):\n",
+    "    if n < 2:\n",
+    "        return True\n",
+    "    \n",
+    "    \n",
+    "    for i in range(2,int(round(Decimal(math.sqrt(n)),0+1))+1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "        \n",
+    "    \n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prime_number(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 에라토스테네스의 체\n",
+    "\n",
+    "# if 2로 안나누어져씅면 2의 배수를 다 빼고\n",
+    "# 3안나누어지면 3 배수 다빼고\n",
+    "# 5 안나누어지면 5 배수 다빼고,..\n",
+    "\n",
+    "def prime_number2(n):\n",
+    "    \n",
+    "    for i in range(2, n+1):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
