--- a/fun_coding/Programmers/level2/프린터.ipynb
+++ b/fun_coding/Programmers/level2/프린터.ipynb
@@ -182,52 +182,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "queue = [1, 1, 9, 1, 1, 1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "queue = list(enumerate(queue))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1), (1, 1), (2, 9), (3, 1), (4, 1), (5, 1)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queue"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "cycle = 0\n",
+    "count = 0\n",
+    "location = 0\n",
+    "\n",
+    "while cycle <= 10:\n",
+    "    cycle += 1\n",
+    "    paper = queue.pop(0)\n",
+    "    max_priority = max(queue, key=lambda x: x[1])[1]\n",
+    "    if paper[1] >= max_priority:\n",
+    "        count += 1\n",
+    "        if paper[0] == location:\n",
+    "            break\n",
+    "    else:\n",
+    "        queue.append(paper)\n",
+    "    \n",
+    "print(count)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1), (1, 1), (2, 9), (3, 1), (4, 1), (5, 1)]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queue = [1,1,9,1,1,1]\n",
+    "queue = list(enumerate(map(int,queue)))\n",
+    "queue"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "queue = [2,1,3,2]\n",
+    "queue = list(enumerate(map(int,queue)))\n",
+    "location = 2\n",
+    "count = 0\n",
+    "\n",
+    "while True:\n",
+    "    max_priority = max(queue, key=lambda x: x[1])[1]\n",
+    "    paper = queue.pop(0)\n",
+    "    \n",
+    "    if paper[1] == max_priority:\n",
+    "        count += 1\n",
+    "        if paper[0] == location:\n",
+    "            break\n",
+    "    else:\n",
+    "        queue.append(paper)\n",
+    "print(count)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queue[2][1] == "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 루프\n",
+      "queue: [(0, 1), (1, 1), (2, 9), (3, 1), (4, 1), (5, 1)]\n",
+      "paper: (0, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "2 번째 루프\n",
+      "queue: [(1, 1), (2, 9), (3, 1), (4, 1), (5, 1), (0, 1)]\n",
+      "paper: (1, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "3 번째 루프\n",
+      "queue: [(2, 9), (3, 1), (4, 1), (5, 1), (0, 1), (1, 1)]\n",
+      "paper: (2, 9) , 남은 놈 중에 max_priority: 1\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "4 번째 루프\n",
+      "queue: [(3, 1), (4, 1), (5, 1), (0, 1), (1, 1), (2, 9)]\n",
+      "paper: (3, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "5 번째 루프\n",
+      "queue: [(4, 1), (5, 1), (0, 1), (1, 1), (2, 9), (3, 1)]\n",
+      "paper: (4, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "6 번째 루프\n",
+      "queue: [(5, 1), (0, 1), (1, 1), (2, 9), (3, 1), (4, 1)]\n",
+      "paper: (5, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "7 번째 루프\n",
+      "queue: [(0, 1), (1, 1), (2, 9), (3, 1), (4, 1), (5, 1)]\n",
+      "paper: (0, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "8 번째 루프\n",
+      "queue: [(1, 1), (2, 9), (3, 1), (4, 1), (5, 1), (0, 1)]\n",
+      "paper: (1, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "9 번째 루프\n",
+      "queue: [(2, 9), (3, 1), (4, 1), (5, 1), (0, 1), (1, 1)]\n",
+      "paper: (2, 9) , 남은 놈 중에 max_priority: 1\n",
+      "else문이 작동합니다.\n",
+      "\n",
+      "10 번째 루프\n",
+      "queue: [(3, 1), (4, 1), (5, 1), (0, 1), (1, 1), (2, 9)]\n",
+      "paper: (3, 1) , 남은 놈 중에 max_priority: 9\n",
+      "else문이 작동합니다.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실험용 \n",
+    "queue = [1, 1, 9, 1, 1, 1]\n",
+    "queue = list(enumerate(map(int, queue)))\n",
+    "location = 0\n",
+    "count = 0\n",
+    "\n",
+    "c = 1\n",
+    "while c < 11:\n",
+    "    print(c, \"번째 루프\")\n",
+    "    print(\"queue:\", queue)\n",
+    "\n",
+    "    paper = queue.pop(0)\n",
+    "    max_priority = max(queue, key=lambda x: x[1])[1]\n",
+    "\n",
+    "    print(\"paper:\", paper, \", 남은 놈 중에 max_priority:\", max_priority)\n",
+    "    if paper[1] == max_priority:\n",
+    "        print(\"if문이 작동합니다.\")\n",
+    "        count += 1\n",
+    "        if paper[0] == location:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"else문이 작동합니다.\")\n",
+    "        queue.append(paper)\n",
+    "\n",
+    "    c += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
