feat: modified chapter2_algorithms

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
@@ -282,6 +282,144 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 리스트는 배열과 비슷하나, 연결리스트와는 아무 관련이 없다. 연결리스트는 O(n), 배열은 O(1) 이다.\n",
+    "\n",
+    "### 리스트 메서드의 시간복잡도\n",
+    "\n",
+    "<img src=\"./imgs/리스트_시간복잡도1.png\" width=\"30%\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['다', '있', '미', '재', ' ', '말', '정', ' ', '즘', '리', '고', '알', ' ', '썬', '이', '파']\n",
+      "['재', '미', '있', '다', ' ', '말', '정', ' ', '즘', '리', '고', '알', ' ', '썬', '이', '파']\n",
+      "['재', '미', '있', '다', ' ', '정', '말', ' ', '즘', '리', '고', '알', ' ', '썬', '이', '파']\n",
+      "['재', '미', '있', '다', ' ', '정', '말', ' ', '알', '고', '리', '즘', ' ', '썬', '이', '파']\n",
+      "['재', '미', '있', '다', ' ', '정', '말', ' ', '알', '고', '리', '즘', ' ', '파', '이', '썬']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 두 포인터를 사용하여 전체 문장을 반전한다. 두번째 반복문에서는 공백을 만났을 때, 각 단어를 다시 반전한다.\n",
+    "def reverser(string1, p1=0, p2=None):\n",
+    "    if len(string1) <2:\n",
+    "        return string1\n",
+    "    \n",
+    "    p2 = p2 or len(string1) -1\n",
+    "    while p1 < p2:\n",
+    "        string1[p1], string1[p2] = string1[p2], string1[p1]\n",
+    "        p1 += 1\n",
+    "        p2 -= 1\n",
+    "\n",
+    "def reversing_words_sentence_logic(string1):\n",
+    "    # 문장 전체를 반전한다\n",
+    "    reverser(string1)\n",
+    "    print(string1)\n",
+    "    p = 0\n",
+    "    start = 0\n",
+    "    while p < len(string1):\n",
+    "        if string1[p] == u\"\\u0020\": #문자열이 유니코드이면\n",
+    "            # 단어를 다시 반전한다(단어를 원위치로 돌려놓는다).\n",
+    "            reverser(string1, start, p-1)\n",
+    "            print(string1)\n",
+    "            start = p+1\n",
+    "        p += 1\n",
+    "    \n",
+    "    # 마지막 단어를 반전한다(단어를 원위치로 돌려놓는다).\n",
+    "    reverser(string1, start, p-1)\n",
+    "    print(string1)\n",
+    "    return \"\".join(string1)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    str1 = \"파이썬 알고리즘 정말 재미있다\"\n",
+    "    str2 = reversing_words_sentence_logic(list(str1))\n",
+    "#     print(str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['파'] []\n",
+      "['파', '이'] []\n",
+      "['파', '이', '썬'] []\n",
+      "['알'] ['파이썬']\n",
+      "['알', '고'] ['파이썬']\n",
+      "['알', '고', '리'] ['파이썬']\n",
+      "['알', '고', '리', '즘'] ['파이썬']\n",
+      "['정'] ['파이썬', '알고리즘']\n",
+      "['정', '말'] ['파이썬', '알고리즘']\n",
+      "['재'] ['파이썬', '알고리즘', '정말']\n",
+      "['재', '미'] ['파이썬', '알고리즘', '정말']\n",
+      "['재', '미', '있'] ['파이썬', '알고리즘', '정말']\n",
+      "['재', '미', '있', '다'] ['파이썬', '알고리즘', '정말']\n",
+      "재미있다 정말 알고리즘 파이썬\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 하나의 반복문만 사용 하는 방법. 단어 단위로 나눠 리스트에 추가한 후 리스트를 반전\n",
+    "\n",
+    "def reverse_words_brute(string):\n",
+    "    word, sentence = [], []\n",
+    "    for character in string:\n",
+    "        if character != \" \":\n",
+    "            word.append(character)\n",
+    "            print(word, sentence)\n",
+    "        else:\n",
+    "            # 조건문에서 빈 리스트는 False다. 여러 공백이 있는 경우, 조건문을 건너 뛴다.\n",
+    "            if word:\n",
+    "                sentence.append(\"\".join(word))\n",
+    "            word = []\n",
+    "        # 마지막 단어가 있다면, 문장에 추갛나다.\n",
+    "    if word != \"\":\n",
+    "        sentence.append(\"\".join(word))\n",
+    "    sentence.reverse()\n",
+    "    return \" \".join(sentence)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    str1 = \"파이썬 알고리즘 정말 재미있다\"\n",
+    "    str2 = reverse_words_brute(str1)\n",
+    "    print(str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
