feat: modified chapter2

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
@@ -404,6 +404,7 @@
     "            word = []\n",
     "        # 마지막 단어가 있다면, 문장에 추갛나다.\n",
     "    if word != \"\":\n",
+    "        #마지막에 sentence에 word를 추가해줌\n",
     "        sentence.append(\"\".join(word))\n",
     "    sentence.reverse()\n",
     "    return \" \".join(sentence)\n",
@@ -411,7 +412,8 @@
     "if __name__ == \"__main__\":\n",
     "    str1 = \"파이썬 알고리즘 정말 재미있다\"\n",
     "    str2 = reverse_words_brute(str1)\n",
-    "    print(str2)"
+    "    print(str2)\n",
+    "    "
    ]
   },
   {
