feat: modified 큰 수 만들기

--- a/fun_coding/Programmers/level2/큰 수 만들기.ipynb
+++ b/fun_coding/Programmers/level2/큰 수 만들기.ipynb
@@ -80,12 +80,9 @@
     "    # 와... 이부분이 진짜 오래걸렸다. 1개가 시간초과 ;\n",
     "    #한 1시간넘게 고민한것같다. 다른사람의 풀이를 참조하였으나 똑같이 시간초과;;;\n",
     "    if k > 0:\n",
-    "        a = a[:ans_len]\n",
-    "        \n",
-    "\n",
+    "        a = a[:ans_len]        \n",
     "\n",
     "    b = \"\".join(a)\n",
-    "    \n",
     "    \n",
     "    return b"
    ]
@@ -119,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +131,7 @@
     "        \n",
     "        if k == 0:\n",
     "            collected += number[i:]\n",
+    "            print(\"yes\")\n",
     "            break\n",
     "\n",
     "        collected.append(num)\n",
@@ -145,17 +143,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number, k = \"1231234\",4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'334'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(number,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 9\n",
+      "2 2\n",
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,num in enumerate(number):\n",
+    "    print(i, num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [9,8,7,6,5,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#안보고 내 풀이\n",
+    "def solution(number, k):\n",
+    "    collected = []\n",
+    "    \n",
+    "    for i, num in enumerate(number):\n",
+    "        while collected and collected[-1] < num and k > 0:\n",
+    "            collected.pop()\n",
+    "            k -= 1\n",
+    "        \n",
+    "        if k == 0:\n",
+    "            collected.append(number[i:])\n",
+    "            #collected += number[i:] 이렇게해도 되는구나\n",
+    "            break\n",
+    "        \n",
+    "        collected.append(num)\n",
+    "    \n",
+    "    \n",
+    "    collected = collected[:-k] if k > 0 else collected\n",
+    "    return \"\".join(collected)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9876'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"987654\",2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "b = \"4567\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a += b[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, '5', '6', '7']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "code",
