feat: added programmers_lv2_조이스틱(not solved yet)

--- a/fun_coding/Programmers/level2/Untitled.ipynb
+++ b/fun_coding/Programmers/level2/Untitled.ipynb
@@ -2,10 +2,129 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 0,\n",
+       " 'B': 1,\n",
+       " 'C': 2,\n",
+       " 'D': 3,\n",
+       " 'E': 4,\n",
+       " 'F': 5,\n",
+       " 'G': 6,\n",
+       " 'H': 7,\n",
+       " 'I': 8,\n",
+       " 'J': 9,\n",
+       " 'K': 10,\n",
+       " 'L': 11,\n",
+       " 'M': 12,\n",
+       " 'N': 13,\n",
+       " 'O': 14,\n",
+       " 'P': 15,\n",
+       " 'Q': 16,\n",
+       " 'R': 17,\n",
+       " 'S': 18,\n",
+       " 'T': 19,\n",
+       " 'U': 20,\n",
+       " 'V': 21,\n",
+       " 'W': 22,\n",
+       " 'X': 23,\n",
+       " 'Y': 24,\n",
+       " 'Z': 25}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alphabets = {k:i for i,k in enumerate([chr(i) for i in range(65,91)])}\n",
+    "alphabets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"JEROEN\"\n",
+    "b = 0\n",
+    "for i in range(len(name)):    \n",
+    "    \n",
+    "    if alphabets[name[i]] <= 13:\n",
+    "        b += alphabets[name[i]]\n",
+    "    else:\n",
+    "        b += 26 - alphabets[name[i]]\n",
+    "\n",
+    "\n",
+    "for i in range(1,len(name)):\n",
+    "    if name[i] != \"A\":\n",
+    "        b += 1\n",
+    "    elif name[i] == \"A\" and i <= len(name) // 2:\n",
+    "        b += i\n",
+    "    else: #A인경우만\n",
+    "        b += i\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5//2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"BBABA\" → 6\n",
+    "\"BBAABAA\" → 7\n",
+    "\"BBAABBB\" → 10\n",
+    "\"BBAABAAAA\" → 7\n",
+    "\"BBAABAAAAB\" → 10\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
