--- a/fun_coding/Programmers/level2/Untitled.ipynb
+++ b/fun_coding/Programmers/level2/Untitled.ipynb
@@ -48,33 +48,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"JEROEN\"\n",
-    "b = 0\n",
+    "# 내풀이 + 다른사람 참조 ㅠ. 다시한번 혼자서 안보고 풀어봐야겠다.\n",
+    "\n",
+    "def solution()\n",
+    "alphabets = {k:i for i,k in enumerate([chr(i) for i in range(65,91)])}\n",
+    "\n",
+    "array = [0] * len(name)\n",
     "for i in range(len(name)):    \n",
     "    \n",
     "    if alphabets[name[i]] <= 13:\n",
-    "        b += alphabets[name[i]]\n",
+    "        array[i] = alphabets[name[i]]\n",
     "    else:\n",
-    "        b += 26 - alphabets[name[i]]\n",
+    "        array[i] = 26 - alphabets[name[i]]\n",
     "\n",
+    "answer = 0\n",
+    "location = 0\n",
     "\n",
-    "for i in range(1,len(name)):\n",
-    "    if name[i] != \"A\":\n",
-    "        b += 1\n",
-    "    elif name[i] == \"A\" and i <= len(name) // 2:\n",
-    "        b += i\n",
-    "    else: #A인경우만\n",
-    "        b += i\n",
-    "        "
+    "while True:\n",
+    "    \n",
+    "    answer += array[location]\n",
+    "    array[location] = 0\n",
+    "    \n",
+    "    if sum(array) == 0:\n",
+    "        break\n",
+    "        \n",
+    "    left,right = 1, 1\n",
+    "    \n",
+    "    while array[location - left] <= 0:\n",
+    "        left += 1\n",
+    "    while array[location + right] <= 0:\n",
+    "        right += 1\n",
+    "        \n",
+    "    answer += left if left < right else right\n",
+    "    location -= left if left < right else right"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 0, 1], [0, 1, 2])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array, idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -83,33 +138,13 @@
        "1"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3 // 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5//2"
+    "3//2"
    ]
   },
   {
