feat: modified ch2

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
@@ -418,6 +418,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a']\n",
+      "['a', '2', 'b']\n",
+      "['a', '2', 'b', '1', 'c']\n",
+      "['a', '2', 'b', '1', 'c', '5', 'a']\n",
+      "a2b1c5a3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2.6.3 단순 문자열 압축\n",
+    "\n",
+    "#다음 문자열  aabbcccccaaa 를 a2b1c5a3 같은 형식으로 압축예제 (카카오 문자열압축에서 봤던문제다.)\n",
+    "\n",
+    "def str_compression(s):\n",
+    "    count, last = 1, \"\"\n",
+    "    list_aux = []\n",
+    "    for i,c in enumerate(s):\n",
+    "        if last == c:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            if i != 0:\n",
+    "                list_aux.append(str(count))\n",
+    "            list_aux.append(c)\n",
+    "            print(list_aux)\n",
+    "            count = 1\n",
+    "            last = c\n",
+    "    list_aux.append(str(count))\n",
+    "    return \"\".join(list_aux)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    result = str_compression(\"aabcccccaaa\")\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
