--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter2_내장시퀀스.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -437,6 +437,10 @@
     "# 2.6.3 단순 문자열 압축\n",
     "\n",
     "#다음 문자열  aabbcccccaaa 를 a2b1c5a3 같은 형식으로 압축예제 (카카오 문자열압축에서 봤던문제다.)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "def str_compression(s):\n",
     "    count, last = 1, \"\"\n",
@@ -458,6 +462,154 @@
     "    result = str_compression(\"aabcccccaaa\")\n",
     "    print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 2.6.4 Permuation\n",
+    "\n",
+    "def perm(s):\n",
+    "    if len(s) < 2:\n",
+    "        return s\n",
+    "    res = []\n",
+    "    for i,c in enumerate(s):\n",
+    "        for cc in perm(s[:i] + s[i+1:]):            \n",
+    "            res.append(c + cc)\n",
+    "            print(c, cc)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "2 1\n",
+      "0 12\n",
+      "0 21\n",
+      "0 2\n",
+      "2 0\n",
+      "1 02\n",
+      "1 20\n",
+      "0 1\n",
+      "1 0\n",
+      "2 01\n",
+      "2 10\n",
+      "['012', '021', '102', '120', '201', '210']\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    val = \"012\"\n",
+    "    print(perm(val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['012', '021', '102', '120', '201', '210']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def perm2(s):\n",
+    "    res = itertools.permutations(s)\n",
+    "    return [\"\".join(i) for i in res]\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    val = \"012\"\n",
+    "    print(perm2(val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2.6.5 회문(palindrome) 앞에서 일긍나 뒤에서 읽으나 동일한 단어 구\n",
+    "\n",
+    "#ex) 다시 합창합시다.\n",
+    "\n",
+    "def is_palindrome(s):\n",
+    "    l = s.split(\" \")\n",
+    "    s2 = \"\".join(l)\n",
+    "    return s2 == s2[::-1]\n",
+    "\n",
+    "def is_palindrome3(s):\n",
+    "    s = s.strip()\n",
+    "    if len(s) < 2:\n",
+    "        return True\n",
+    "    if s[0] == s[-1]:\n",
+    "        return is_palindrome(s[1:-1])\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    str1 = \"다시 합창합시다\"\n",
+    "    str3 = \"hello\"\n",
+    "    \n",
+    "    print(is_palindrome(str1))\n",
+    "    print(is_palindrome(str3))\n",
+    "    print(is_palindrome3(str1))\n",
+    "    print(is_palindrome3(str3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
