feat: added 카카오_크레인인형뽑기 ;

--- a/fun_coding/Programmers/level2/소수찾기.ipynb
+++ b/fun_coding/Programmers/level2/소수찾기.ipynb
@@ -4,130 +4,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./imgs/5_PassingCars.png\" width=\"60%\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# O(N**2) -_-;\n",
-    "def solution(A):\n",
-    "    count = 0\n",
-    "    \n",
-    "    a = {0:1}\n",
-    "    while 0 in A:\n",
-    "        b = A.pop(0)\n",
-    "        \n",
-    "        if b == 0:\n",
-    "            count += A.count(a[b])\n",
-    "    return count"
+    "<img src=\"./imgs/소수찾기.png\" width=\"80%\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "solution([1,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# O(N) really sick of for loops;\n",
-    "def solution(A):\n",
-    "    count = 0\n",
-    "    sum_A = 0\n",
+    "def is_prime(A):\n",
+    "    if A < 2:\n",
+    "        return 0\n",
     "    \n",
+    "    for i in range(2, int(A//2 + 1)):\n",
+    "        if A % i == 0:\n",
+    "            return 0\n",
+    "    return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1', '7'), ('7', '1')]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations, permutations\n",
+    "\n",
+    "list(permutations(\"17\", 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perm(s):\n",
+    "    res = []\n",
+    "    for i in range(1, len(s)+1):\n",
+    "        for j in permutations(s,i):\n",
+    "            res.append(int(\"\".join(j)))\n",
+    "    return set(res)\n",
+    "        \n",
+    "def is_prime(A):\n",
+    "    if A < 2:\n",
+    "        return 0\n",
+    "    \n",
+    "    for i in range(2, int(A//2 + 1)):\n",
+    "        if A % i == 0:\n",
+    "            return 0\n",
+    "    return 1\n",
+    "\n",
+    "def solution(s):\n",
+    "    answer = 0\n",
+    "    A = perm(s)\n",
     "    for i in A:\n",
-    "        \n",
-    "        if i == 0:\n",
-    "            sum_A += 1\n",
-    "        else:\n",
-    "            count += sum_A\n",
-    "    if count > 1000000000:\n",
-    "        return -1\n",
-    "    return count\n",
-    "        \n",
-    "            "
+    "        answer += is_prime(i)\n",
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = [0,1,0,1,1]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[1]"
+    "solution(\"17\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import collections\n",
-    "A = [0,1,0,1,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0: 2, 1: 3})"
+       "{1, 7, 11, 17, 71, 117, 171, 711}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "collections.Counter(A)"
+    "possible_numbers(\"171\")"
    ]
   },
   {
