--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter3_ 컬렉션자료구조.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter3_ 컬렉션자료구조.ipynb
@@ -129,6 +129,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'버피': 3, '에인절': 2, '몬스터': 2, '잰더': 1, '윌로': 1, '슈퍼': 1})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "seq = \"버피 에인절 몬스터 잰더 윌로 버피 몬스터 슈퍼 버피 에인절\"\n",
+    "Counter(seq.split(\" \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'버피': 3, '에인절': 2, '몬스터': 2, '잰더': 1, '윌로': 1, '슈퍼': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "seq = \"버피 에인절 몬스터 잰더 윌로 버피 몬스터 슈퍼 버피 에인절\"\n",
+    "words = seq.split()\n",
+    "word_dict = defaultdict(int)\n",
+    "for word in words:\n",
+    "    word_dict[word] += 1\n",
+    "print(word_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"marina\"\n",
+    "s2 = \"aniram\"\n",
+    "\n",
+    "if Counter(s1)  == Counter(s2):\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -340,6 +415,33 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,6]\n",
+    "S = 4\n",
+    "\n",
+    "c = []\n",
+    "for i in a:\n",
+    "    if i <= 3:\n",
+    "        c.append((i))\n",
+    "\n",
+    "print(c)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
