--- a/fun_coding/codility/5_MinAvgTwoSlice(Prefix Sums).ipynb
+++ b/fun_coding/codility/5_MinAvgTwoSlice(Prefix Sums).ipynb
@@ -18,55 +18,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 4, 1: 2, 2: 2, 3: 5, 4: 1, 5: 5, 6: 8}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def solution(A):\n",
-    "    b = []\n",
-    "    for i in range(len(A)-1):\n",
-    "        a = []\n",
-    "        for j in range(i+1,len(A)):\n",
-    "            a.append(sum(A[i:j])/len(A[i:j]))\n",
-    "        print(a)\n",
-    "        \n",
-    "        b.append(min(a))\n",
-    "    return b"
+    "A_dict = {i:v for i,v in enumerate(A)}\n",
+    "A_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(A)):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(A):\n",
+    "    result = 0\n",
+    "    len_A = len(A)\n",
+    "    a = [0]\n",
+    "    \n",
+    "    for i in range(len_A):\n",
+    "        a.append(a[i] + A[i])\n",
+    "        print(a)\n",
+    "        \n",
+    "    min_avg = sum(A)/len(A)\n",
+    "    \n",
+    "    for i in range(len_A-1):\n",
+    "        idx1 = i + 1\n",
+    "        idx2 = i + 2\n",
+    "        avg = a[idx1+1] - a[i] / 2.0\n",
+    "        if (avg < min_avg):\n",
+    "            min_avg = avg\n",
+    "            result = i\n",
+    "        \n",
+    "        if (i < len_A - 2):\n",
+    "            avg = (a[idx2 + 1] - a[i]) / 3.0\n",
+    "            if avg < min_avg:\n",
+    "                min_avg = avg\n",
+    "                result = i\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def solution(A):\n",
+    "  result = 0\n",
+    "  length = len(A)\n",
+    "  valueList = [0]\n",
+    "  for i in range(length):\n",
+    "    valueList.append(valueList[i] + A[i])\n",
+    "\n",
+    "  minAvg = sys.float_info.max\n",
+    "  for i in range(length - 1):\n",
+    "    index1 = i + 1\n",
+    "    index2 = i + 2\n",
+    "    avg = (valueList[index1 + 1] - valueList[i]) / 2.0\n",
+    "    if(avg < minAvg):\n",
+    "      minAvg = avg\n",
+    "      result = i\n",
+    "\n",
+    "    if(i < length - 2):\n",
+    "      avg = (valueList[index2 + 1] - valueList[i]) / 3.0\n",
+    "      if(avg < minAvg):\n",
+    "        minAvg = avg\n",
+    "        result = i\n",
+    "\n",
+    "  return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4.0, 3.0, 2.6666666666666665, 3.25, 2.8, 3.1666666666666665]\n",
-      "[2.0, 2.0, 3.0, 2.5, 3.0]\n",
-      "[2.0, 3.5, 2.6666666666666665, 3.25]\n",
-      "[5.0, 3.0, 3.6666666666666665]\n",
-      "[1.0, 3.0]\n",
-      "[5.0]\n",
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "min() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-8c9704134504>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-15-5e369400ff59>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(A)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: min() arg is an empty sequence"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "solution(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7976931348623157e+308"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.float_info.max"
    ]
   },
   {
@@ -93,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
