--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter4_구조와모듈.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter4_구조와모듈.ipynb
@@ -406,13 +406,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
     "\n",
     "minus_one_dict = collections.defaultdict(lambda: -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<function <lambda> at 0x123c69290>, {0: -1, 1: 0, 2: 1, 3: 2, 4: 3, 5: 4, 6: 5, 7: 6, 8: 7, 9: 8})\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(10):\n",
+    "    minus_one_dict[num] += num\n",
+    "print(minus_one_dict)"
    ]
   },
   {
