--- a/fun_coding/codility/6_numberofdiskintersections.ipynb
+++ b/fun_coding/codility/6_numberofdiskintersections.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# O(N**2), but Performace == 0% lol\n",
+    "# 1st try. O(N**2), 87% correctness, Performace == 0% lol\n",
     "def solution(A):\n",
     "    if len(A) > 100000:\n",
     "        return -1\n",
@@ -89,64 +89,105 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "solution([1,2147483647,0])"
+    "A = [1, 5, 2, 1, 4, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[-1, 0, 1], [-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6]],\n",
-       " [[-1, 0, 1], [0, 1, 2, 3, 4]],\n",
-       " [[-1, 0, 1], [0, 1, 2, 3, 4, 5, 6, 7, 8]],\n",
-       " [[-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6], [0, 1, 2, 3, 4]],\n",
-       " [[-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6], [2, 3, 4]],\n",
-       " [[-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6], [0, 1, 2, 3, 4, 5, 6, 7, 8]],\n",
-       " [[-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6], [5]],\n",
-       " [[-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6], [-1, 0, 1]],\n",
-       " [[0, 1, 2, 3, 4], [2, 3, 4]],\n",
-       " [[0, 1, 2, 3, 4], [0, 1, 2, 3, 4, 5, 6, 7, 8]],\n",
-       " [[0, 1, 2, 3, 4], [-1, 0, 1]],\n",
-       " [[0, 1, 2, 3, 4], [-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6]],\n",
-       " [[2, 3, 4], [0, 1, 2, 3, 4, 5, 6, 7, 8]],\n",
-       " [[2, 3, 4], [-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6]],\n",
-       " [[2, 3, 4], [0, 1, 2, 3, 4]],\n",
-       " [[0, 1, 2, 3, 4, 5, 6, 7, 8], [5]],\n",
-       " [[0, 1, 2, 3, 4, 5, 6, 7, 8], [-1, 0, 1]],\n",
-       " [[0, 1, 2, 3, 4, 5, 6, 7, 8], [-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6]],\n",
-       " [[0, 1, 2, 3, 4, 5, 6, 7, 8], [0, 1, 2, 3, 4]],\n",
-       " [[0, 1, 2, 3, 4, 5, 6, 7, 8], [2, 3, 4]],\n",
-       " [[5], [-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6]],\n",
-       " [[5], [0, 1, 2, 3, 4, 5, 6, 7, 8]]]"
+       "[(-1, 1), (-4, 6), (0, 4), (2, 4), (0, 8), (5, 5)]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1, 2147483647, 0"
+    "a = []\n",
+    "for i,v in enumerate(A):\n",
+    "    a.append((i-v,v+i))\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a[0][0])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2nd try O(N**2), 100% correctness, 0% performance \n",
+    "def solution(A):\n",
+    "    a = []\n",
+    "    for i,v in enumerate(A):\n",
+    "        a.append((i-v,v+i))\n",
+    "\n",
+    "    while_count = 0\n",
+    "    count = 0\n",
+    "    while while_count < len(A):\n",
+    "        b = a.pop(0)\n",
+    "        for i in a:\n",
+    "            if (b[0] >= i[0] and b[0] <= i[1]) or (b[0] <= i[0] and b[1] >= i[0]):\n",
+    "                count += 1\n",
+    "\n",
+    "        while_count += 1\n",
+    "        a.append(b)\n",
+    "    answer = count // 2\n",
+    "    return answer if answer <= 10000000 else -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([1, 2147483647, 0])"
+   ]
   },
   {
    "cell_type": "code",
