Feat: added study_review_ch5

--- a/fun_coding/codility/6_numberofdiskintersections.ipynb
+++ b/fun_coding/codility/6_numberofdiskintersections.ipynb
@@ -337,7 +337,13 @@
     "print(a)\n",
     "print(b)\n",
     "while_counter = 0\n",
-    "counter = 0"
+    "counter = 0\n",
+    "\n",
+    "3\n",
+    "4\n",
+    "4\n",
+    "5\n",
+    "6\n"
    ]
   },
   {
@@ -369,7 +375,7 @@
     "            \n",
     "            if counter > 10000000:\n",
     "                return -1\n",
-    "            \n",
+    "\n",
     "    return counter"
    ]
   },
