--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter5_객체지향설계.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter5_객체지향설계.ipynb
@@ -515,8 +515,204 @@
     "\n",
     "#### 5.3.1 데커레이터 패턴\n",
     "- 데커레이터 패턴은 `@` 표기를 사용해 함수 또는 메서드의 반환을 우아하게 지정해주는 도구.\n",
-    "- 데커레이터 패턴은 함수의 객체와 함수를 변경하는 다른 객체의 wrapping을 허용한다."
+    "- 데커레이터 패턴은 함수의 객체와 함수를 변경하는 다른 객체의 wrapping을 허용한다.\n",
+    "- 쓰는 이유: 이미 만들어져 있는 기존의 코드를 수정하지 않고도, 래퍼 함수를 이용하여 여러가지 기능 추가 가능"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-43-7ab91d0a7d97>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-7ab91d0a7d97>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    class C(object):\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "class C(object):\n",
+    "    @my_decorator\n",
+    "    def method(self):\n",
+    "        # 메서드 내용\n",
+    "        \n",
+    "#------ 같은내용\n",
+    "\n",
+    "\n",
+    "class C(object):\n",
+    "    def method(self):\n",
+    "        # 메서드 내용\n",
+    "    method = my_decorator(method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "random_tree 0.02802301100018667\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데커레이터를 사용하여 리스트에 임의의 값을 넣는 함수를 벤치마킹하는 코드 예제\n",
+    "\n",
+    "import random\n",
+    "import time\n",
+    "\n",
+    "def benchmark(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        t = time.perf_counter()\n",
+    "        res = func(*args, **kwargs)\n",
+    "        print(\"{0} {1}\".format(func.__name__, time.perf_counter()-t))\n",
+    "        return res\n",
+    "    return wrapper\n",
+    "\n",
+    "@benchmark\n",
+    "def random_tree(n):\n",
+    "    temp = [n for n in range(n)]\n",
+    "    for i in range(n+1):\n",
+    "        temp[random.choice(temp)] = random.choice(temp)\n",
+    "    return temp\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    random_tree(10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 파이썬에서 일반적으로 사용하는 데커레이터는 `@classmethod`, `@staticmethod`가 있다.\n",
+    "- `@classmethod`는 첫번째 인수로 클래스(cls)를 사용하고 `@staticmethod`는 첫번째 인수에\\\n",
+    "self 혹은 cls가 없다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo<__main__.A object at 0x11b156ad0>, 1 실행\n",
+      "class_foo(<class '__main__.A'>, 2) 실행: True\n",
+      "class_foo(<class '__main__.A'>, 2) 실행: True\n",
+      "static_foo(3) 실행\n",
+      "static_foo(3) 실행\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A(object):\n",
+    "    _hello = True\n",
+    "    \n",
+    "    def foo(self, x):\n",
+    "        print(\"foo{0}, {1} 실행\".format(self, x))\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def class_foo(cls, x):\n",
+    "        print(\"class_foo({0}, {1}) 실행: {2}\".format(cls, x, cls._hello))\n",
+    "\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def static_foo(x):\n",
+    "        print(\"static_foo({0}) 실행\".format(x))\n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    a = A()\n",
+    "    a.foo(1)\n",
+    "    a.class_foo(2)\n",
+    "    A.class_foo(2)\n",
+    "    a.static_foo(3)\n",
+    "    A.static_foo(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### 5.3.2 옵저버 패턴\n",
+    "- `Observer`패턴은 특정 값을 유지하는 핵심 객체를 갖고, \\\n",
+    "직렬화된 객체의 복사본을 생성하는 일부 옵저버(관찰자)가 있는 경우 유용하다.\n",
+    "- 즉, 객체의 one-to-many 의존 관계에서 한 객체의 상태가 변경시, \\\n",
+    "그 객체에 종속된 모든 객체에 그 내용을 통지, 자동으로 상태 갱신.\n",
+    "- `property` 데커레이터를 사용하여 구현가능."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def outer_func():\n",
+    "    a = 20\n",
+    "    \n",
+    "    def inner_func():\n",
+    "        a = 30\n",
+    "        print(\"Namespace:\", __name__)\n",
+    "    inner_func()\n",
+    "    \n",
+    "a = 10\n",
+    "outer_func()\n",
+    "print(\"Namespace:\", __name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
