feat: added ch6_파이썬고급주제

--- a/fun_coding/codility/7_Fish(StackandQueues).ipynb
+++ b/fun_coding/codility/7_Fish(StackandQueues).ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A, B = [4, 3, 2, 1, 5], [0,0,0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4, 0), (3, 1), (2, 0), (1, 0), (5, 0)]"
+       "[(4, 0), (3, 0), (2, 0), (1, 0), (5, 0)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,26 +63,25 @@
     "    c = list(zip(A,B))\n",
     "    a = []\n",
     "    \n",
-    "    while c[0][1] == c[1][1]:\n",
-    "        a.append(c.pop(0))\n",
-    "    print(a)\n",
-    "        "
+    "    for i in range(1,len(c)):\n",
+    "        if c[i-1][1] == c[i][1]:\n",
+    "            a.append(c[i-1])\n",
+    "        else:\n",
+    "            break\n",
+    "    print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 0), (3, 0), (2, 0), (1, 0)]\n"
+     ]
     }
    ],
    "source": [
