--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
@@ -4,7 +4,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.7.1 연습문제(base -> decimal)"
+    "### 1.1 정수\n",
+    "- 파이썬에서 정수는 `int`로 나타내며 불변(immutable)형\n",
+    "- 파이썬 정수 크기는 컴퓨터 메모리에 의해 제한된다.(C or Java내장 컴파일러에 따라 다름)\n",
+    "- 파이썬 정수 크기는 적어도 32비트(4바이트)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문자열을 정수로 변환, 다른 진법의 문자열을 정수(10진법)로 변환시 int(문자열, 밑) 메서드 사용.\n",
+    "\n",
+    "s = '11'\n",
+    "d = int(s)\n",
+    "print(d)\n",
+    "b = int(s, 2)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 부동소수점\n",
+    "\n",
+    "- 파이썬에서 부동소수점은 float로 나타내며 불변형이다.\n",
+    "- 단정도 방식에서 32비트 부동소수점을 나타낼때 1비트는 부호(0:양수, 1:음수), 23비트는 유효 숫자 자릿수, 8비트는 지수이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ex) 십진수 -118.625를 32비트 단정도로 표현하는 예시\n",
+    "\n",
+    "- 118 = 1110110\n",
+    "- 0.625 = 101\n",
+    "\n",
+    "- 1110110.101 = 1.110110101 x 2^6\n",
+    "\n",
+    "- 위의 숫자를 가수부(23비트)에 삽입. 부족한 자릿수는 0으로 채운다,\n",
+    "\n",
+    "- 지수는 6이므로 바이어스를 더한다. 즉 지수6에 127(0111 1111)을 더해서 지수부에 삽입.\n",
+    "\n",
+    "- 책 21~22 pg참조\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2.1 부동소수점끼리 비교하기\n",
+    "- 부동소수점은 `이진수 분수(binary fraction)` 으로 표현되기 때문에 함부로 비교하거나 빼면 안된다.\n",
+    "- 0.1{decimal} = 0.00110011001100..._{binary} 등의 2진법표현하기 어려운 숫자\n",
+    "\n",
+    "```python\n",
+    ">>> 0.2 * 3 == 0.6\n",
+    "False\n",
+    ">>> 1.2-0.1 == 1.1\n",
+    "False\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2.2 정수와 부동소수점 메서드\n",
+    "- divmod(x, y) 메서드를 사용하여, x를 y로 나눌 때, 몫과 나머지를 반환한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 복소수\n",
+    "\n",
+    "- 파이썬에서 `복소수`는  z = 3 + 4j와 같이 생긴 부동소수점 한 쌍을 갖는 불변형이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7.1 연습문제(base -> decimal)"
    ]
   },
   {
